cluster-cd/apps/base/quickshare/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: &name quickshare
    app.kubernetes.io/instance: &instance quickshare
    app.kubernetes.io/part-of: *instance
    k8s-app: *name
  name: *name
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
      app.kubernetes.io/instance: *instance
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/instance: *instance
      annotations:
        backup.velero.io/backup-volumes: data
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: quickshare
          image: 'hexxa/quickshare:v0.10.4'
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 1024Mi
            requests:
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8686
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /quickshare/root
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: quickshare-data
